# AID_Genesis

./: CHANGELOG.md  LICENSE  README.md  concept_craft.txt  next.config.js  package-lock.json  package.json  pyproject.toml  requirements.txt  scenarios.md  tailwind.config.js  test_genesis_system.py
.next/: trace
.next/cache/webpack/client-development/: 1.pack.gz_  3.pack.gz_  4.pack.gz_  5.pack.gz_  index.pack.gz.old
.next/cache/webpack/client-development-fallback/: 0.pack.gz_  index.pack.gz.old
.next/cache/webpack/server-development/: 0.pack.gz_  1.pack.gz_  3.pack.gz_  4.pack.gz_  index.pack.gz_
.next/server/: server-reference-manifest.json  webpack-runtime.js
.next/server/app/: page.js  page_client-reference-manifest.js
.next/server/app/_not-found/: page_client-reference-manifest.js
.next/server/vendor-chunks/: @monaco-editor.js  @swc.js  framer-motion.js  goober.js  lucide-react.js  next.js  react-hook-form.js  react-hot-toast.js  state-local.js  use-sync-external-store.js  zustand.js
.next/static/chunks/: webpack.js
.next/static/chunks/app/: layout.js  page.js
.next/static/chunks/fallback/: webpack.js
.next/static/css/app/: layout.css
.next/static/webpack/: cf8487aaa0f84f93.webpack.hot-update.json  webpack.476f9b9cdbe8be36.hot-update.js  webpack.ab4c3e221c11ddb5.hot-update.js  webpack.beaa85e7ae62d05c.hot-update.js  webpack.cf8487aaa0f84f93.hot-update.js  webpack.dfef73659ea534d7.hot-update.js  webpack.ec97a31bb26e6d94.hot-update.js
.next/static/webpack/app/: layout.ab4c3e221c11ddb5.hot-update.js  page.beaa85e7ae62d05c.hot-update.js  page.cf8487aaa0f84f93.hot-update.js  page.ec97a31bb26e6d94.hot-update.js
aid_commander_genesis/: __init__.py
aid_commander_genesis/adaptive_intelligence/: __init__.py  core.py  models.py
aid_commander_genesis/cli/: __init__.py  main.py
aid_commander_genesis/conceptcraft/: __init__.py  core.py  models.py
aid_commander_genesis/cross_project_learning/: __init__.py
aid_commander_genesis/story_engine/: __init__.py  core.py
aid_commander_genesis/unified_validation/: __init__.py
app/: globals.css  layout.tsx  page.tsx
components/: CodeEditor.tsx  CodeGenerationInterface.tsx  ExportPanel.tsx  Header.tsx  ProgressIndicator.tsx  ProjectStructure.tsx  ProjectWizard.tsx  Sidebar.tsx  WelcomeScreen.tsx
components/wizard/: DesignPreferences.tsx  FeatureSelector.tsx  PerformanceSettings.tsx  TechnologySelector.tsx
docs/: GENESIS_OVERVIEW.md
lib/: utils.ts
store/: projectStore.ts
